# chirpy

./: .gitignore  MultiFrequencyWaveformInvkWave.py  README.md  animate_results.py  breast_frequency_domain.py  breast_simulation.py  breast_time_domain.py  circle_model_td.py  convert_notebooks.py  main.py  pyproject.toml  requirements.txt
FullWaveUST/data/: acquisition_data.py  data_container.py  image_data.py
FullWaveUST/geometry/: __init__.py  acquisition_geometry.py  base.py  image_geometry.py
FullWaveUST/io/: load_mat.py  load_mat_c.py  save_results.py
FullWaveUST/processors/: __init__.py  acceptance_mask.py  base.py  down_sample.py  dtft.py  outlier_removal.py  phase_screen.py  pipeline.py  time_window.py
FullWaveUST/utils/: InversionVisualizer.py
UFWI/data/: __init__.py  acquisition_data.py  data_container.py  image_data.py
UFWI/geometry/: __init__.py  base.py  image_grid_2D.py  transducer.py  transducer_array_2D.py
UFWI/io/: __init__.py  load_mat.py  load_mat_c.py  save_results.py
UFWI/processors/: __init__.py  acceptance_mask.py  base.py  down_sample.py  dtft.py  lowpass_filter.py  (+4 more)
doc/: note_data.ipynb  note_optimization.ipynb  note_processors.ipynb
examples/: breast_frequency_domain.ipynb  breast_frequency_domain.py  breast_simulation.ipynb  breast_simulation.py  breast_time_domain.ipynb  breast_time_domain.py  circle_model_td.ipynb  circle_model_td.py
functions/: applyBlockLU.py  stencilOptParams.py
test/: test_adjoint.py  test_encoding.py  test_forward.py  test_gradient_ring.py  test_gradient_single_pair.py  test_init_gradient.py
(+82 files in other folders)
